<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/color_primary_light"
    android:backgroundTint="@color/color_primary_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0.9"
            android:background="@color/white"
            android:backgroundTint="@color/color_primary_light">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@color/color_primary"
                android:elevation="6dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:translationZ="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonPlusMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/buttonPlusMinus"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/buttonPersent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/buttonPersent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/buttonDivide"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_7"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_8"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_9"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/buttonMultp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/buttonMulti"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_4"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_5"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_6"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/buttonMinus"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTintMode="screen"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_1"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_2"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_3"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_accent"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/buttonPlus"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.34"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_0"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/buttonDecimal"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:backgroundTint="@color/color_accent"
                android:elevation="6dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/buttonEqual"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:translationZ="6dp"
                app:cornerRadius="0dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
